# vindex

./: .gitignore  CHINESE_CLIP_README.md  CHINESE_MODELS_COMPLETE.md  CMakeLists.txt  CMakeLists_full.txt  CMakeLists_test.txt  COMPILE_COMPLETE.md  CPP_BUILD_GUIDE.md  CRITICAL_BUG_FIX.md  ONNX_CPP_TEST_COMPLETE.md  ONNX_SUCCESS_REPORT.md  README.md  TEXT_SEARCH_STATUS.md  build_and_test.bat  compile_and_run.bat  download_onnxruntime.py  run_test.bat  simple_onnx_test.cpp  simple_test.cpp  test_cpp_inference.py  test_inference.cpp  test_onnx_inference.py  verify_cpp_integration.py
.claude/: settings.local.json
assets/config/: app_config.json
assets/models/blip/: blip_config.json
assets/models/cn-clip/: model_info.json
assets/models/cn-clip-eisneim/: README.md
assets/models/ocr/: ocr_config.json
assets/models/taiyi-clip/: README.md  config.json  model_info.json  tokenizer_config.json
docs/: BUG_FIXES.md  BUILD.md  CHINESE_CLIP_QUICKSTART.md  CHINESE_CLIP_SUPPORT.md  CN_CLIP_DOWNLOAD_SUCCESS.md  FINAL_MODEL_DOWNLOAD_REPORT.md  MODEL_DOWNLOAD_STATUS.md  OCR_SETUP_GUIDE.md  ONNXRUNTIME_PATH.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEXT_SEARCH_IMPLEMENTATION.md  TEXT_SEARCH_QUICKSTART.md  WINDOWS_BUILD_GUIDE.md
resources/: text_corpus.txt
resources/styles/: modern.qss
scripts/: clip_milvus_search.py  convert_to_onnx.py  download_all_models.py  download_chinese_clip.py  download_models_simple.py  download_ocr_models.py  example_clip_search.py  export_blip_onnx.py  export_blip_vqa_onnx.py  export_clip_simple.py  export_clip_to_onnx.py  export_cn_clip_onnx.py  export_models_simple.py  quantize_cn_clip_eisneim.py  quantize_taiyi_clip.py  requirements.txt  setup.bat  setup.sh  verify_onnx_models.py
src/: main.cpp  test_text_encoding.cpp
src/core/: caption_model.cpp  caption_model.h  clip_encoder.cpp  clip_encoder.h  image_preprocessor.cpp  image_preprocessor.h  model_manager.cpp  model_manager.h  ocr_model.cpp  ocr_model.h  onnx_session.cpp  onnx_session.h  text_tokenizer.cpp  text_tokenizer.h  vqa_model.cpp  vqa_model.h
src/gui/: api_ai_widget.cpp  api_ai_widget.h  caption_widget.cpp  caption_widget.h  database_widget.cpp  database_widget.h  image_gallery.cpp  image_gallery.h  image_search_widget.cpp  image_search_widget.h  image_to_text_widget.cpp  image_to_text_widget.h  main_window.cpp  main_window.h  match_widget.cpp  match_widget.h  ocr_widget.cpp  ocr_widget.h  text_search_widget.cpp  text_search_widget.h  vqa_widget.cpp  vqa_widget.h
src/index/: database_manager.cpp  database_manager.h  faiss_index.cpp  faiss_index.h  id_mapping.cpp  id_mapping.h  text_corpus_index.cpp  text_corpus_index.h
src/utils/: api_client.cpp  api_client.h  translator.cpp  translator.h
